--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,91 +1,12 @@
-<h1>user main page </h1>
-<div>
-  <h2> 
-    <%=  @user.current_balance%>
-  </h2>
-</div>
-
-<div>
-
-</div>
-<%= form_for :user, :url => {:controller => :user, :action => :index} do |f| %>
-    <% if @user.errors.any? %>
-      <% @user.errors.full_messages.each do |msg| %>
-        <div class= "alertUser ">
-          <%= msg%>
-        </div>
-      <% end %>
-    <% end %>
-    <p >
-      Enter the sum to withdraw or to deposit <br>
-      <%= f.text_field :current_balance %>
-    </p>
-
-    <p >
-    <%= f.submit 'Withdraw' %>
-
-    </p>
-    <p >
-    <%= f.submit 'Deposit' %>
-
-    </p>
-
-  <%end%>
-<div><%= @user.email %>
-</div>
-
-<div>
-<%if @record !=nil%>
-  <%@record.each do |item|%>
-    <%=item.operation_type%>
-    <%=item.amount%>
-    <%=item.balance_after%>
-    <%=item.created_at%>
-<%end%>
-  <% end %>
-</div>
-
-
 <html>
 
 <head>
   <title>CuteBank</title>
-  <%= stylesheet_link_tag 'ClientInterface.css' %>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-<div id="container">
-
-  <div id="header">
-    <div class="fon-head">
-
-
-      <nav>
-        <div class="logo-box">
-          <h1 class="logo">
-            <a href="/">
-              <img src="/assets/logo-head.svg">
-            </a>
-          </h1>
-        </div>
-        <ul>
-          <li>
-            <%= link_to image_tag('/assets/icon-reg.svg') + "Registration", new_user_registration_path %>
-            <div class="border-reg"></div>
-          </li>
-          <li>
-            <%= link_to image_tag('/assets/icon-in.svg') + "Sign in", new_user_session_path %>
-          </li>
-          <li><a href="#"><img src="/assets/icon-lan.svg">Ru</a></li>
-        </ul>
-      </nav>
-
-
-    </div>
-  </div>
-
   <div id="content">
     <div class="fon-content">
 
@@ -93,86 +14,104 @@
 
       <div class="do_balance">
         <div class="input_balance">
+          <%= form_for :user, :url => {:controller => :user, :action => :index} do |f| %>
+            <% if @user.errors.any? %>
+              <% @user.errors.full_messages.each do |msg| %>
+                <div class= "alertUser ">
+                  <%= msg%>
+                </div>
+              <% end %>
+            <% end %>
+            <p >
+              <%= f.text_field :current_balance, :placeholder => 'Input value:', :class => 'input_monay' %>
+            </p>
 
+            <p >
+              <%= f.submit 'Deposit', :class => 'submit-deposit' %>
+            </p>
+
+            <p >
+              <%= f.submit 'Withdraw', :class => 'submit-withdraw' %>
+            </p>
+
+          <%end%>
         </div>
-<div class="operation_balance">
+      
 
+
+        <div class="balance">
+        
+        <div class="right_block_balance">
+        <span class="text-balance">Balance:</span><br>
+        <span class="value-balance">$<%=  @user.current_balance%></span>
+        </div>
+
+
+
+        <div class="Latest_operations">
+        <br><span class="latest-operation">Latest operations:</span>
+
+
+        <table>
+          <%if @record !=nil%>
+            <%2.times do |i|%>
+              <%record = @record[@record.count - i - 1 ] %>
+              <tr>
+              <% if record.operation_type == 'Deposit'%>
+              
+              <td><span class="deposit" ><%=record.operation_type%>:</span></td>
+                <td><span class="deposit" >+$<%=record.amount%></span></td>
+                
+                
+                <%else%>
+                
+                <td><span class="withdraw"><%=record.operation_type%>:</span></td>
+                <td><span class="withdraw">-$<%=record.amount%></span></td>
+                <%end%>
+                
+              </tr>    
+            <%end%>
+          <% end %>
+          </table>
+          </div>
+
+          </div>
 </div>
-      </div>
-
-      <div class="balance">
-
-      </div>
 
 
-      <div class="headphones">
-        <a href="#"><img src="/assets/icon-headphones.svg" alt=""></a>
+
+
+        <div class="operation_balance">
+          <table>
+          <tr>
+            <th>Operation</th>
+            <th>Amount</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Balance</th>
+          </tr>
+            <%if @record !=nil%>
+              <%@record.each do |item|%>
+                <tr>
+                <td><%=item.operation_type%></td>
+                <td>+<%=item.amount%></td>
+                <%datetime = item.created_at.to_s.dup.force_encoding("UTF-8")%>
+                <% date = datetime.strip.split(' ')[0]%>
+                <% time = datetime.strip.split(' ')[1]%>
+                <td><%=date%></td>
+                <td><%=time%></td>
+                <td><%=item.balance_after%></td>
+                </tr>
+              <%end%>
+            <% end %>
+            </table>
+        </div>
+
+
+
+
       </div>
     </div>
-  </div>
-
-  <div id="footer">
-    <div class="fon-footer">
-
-
-      <nav>
-        <div class="logo-box">
-          <h1 class="logo">
-            <a href="/">
-              <img src="/assets/logo-head.svg">
-            </a>
-          </h1>
-        </div>
-        <ul>
-          <li><a href="#"><img src="/assets/icon-about.svg">About</a>
-            <div class="border-reg"></div>
-          </li>
-          <li><a href="#" class="border-in"><img src="/assets/icon-contact.svg">Contacts</a></li>
-          <li><img class="icon-time" src="/assets/icon-time.svg"><span id="date_time"></span></li>
-          <li><a href="#"><img src="/assets/icon-rights.svg">Rights reserved</a>
-            <div class="border-reg"></div>
-          </li>
-        </ul>
-      </nav>
-
-
-    </div>
-  </div>
-
-</div>
-
-<script>
-    /* функция добавления ведущих нулей */
-    /* (если число меньше десяти, перед числом добавляем ноль) */
-    function zero_first_format(value) {
-        if (value < 10) {
-            value = '0' + value;
-        }
-        return value;
-    }
-
-    /* функция получения текущей даты и времени */
-    function date_time() {
-        var current_datetime = new Date();
-        var day = zero_first_format(current_datetime.getDate());
-        var month = zero_first_format(current_datetime.getMonth() + 1);
-        var year = current_datetime.getFullYear();
-        var hours = zero_first_format(current_datetime.getHours());
-        var minutes = zero_first_format(current_datetime.getMinutes());
-        var seconds = zero_first_format(current_datetime.getSeconds());
-
-        return day + "." + month + "." + year + " " + hours + ":" + minutes + ":" + seconds;
-    }
-
-    /* каждую секунду получаем текущую дату и время */
-    /* и вставляем значение в блок с id "current_date_time_block2" */
-    setInterval(function() {
-        document.getElementById('date_time').innerHTML = date_time();
-    }, 1000);
-
-</script>
-
-
 </body>
 
 </html>
